other changes, these are not important.

--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -696,14 +696,12 @@
 
         Combining \eqref{eq:tracesum_S},\eqref{eq:N_genus_inequality},\eqref{eq:N_S_M_equality} and the fact that 
         $ S(\alpha,\beta,v) $ is even, we can get our assertion
-        \[S(\alpha,\beta,v)\le 2\left\lfloor 2^{\frac{k}{2}+1}\right\rfloor+4.\]
+        \[\left\lvert S(\alpha,\beta,v)\right\rvert \le 2\left\lfloor 2^{\frac{k}{2}+1}\right\rfloor+4.\]
     \end{proof}
     
     For other cases, we will give the upper bounds of $ \max_{v}|W_{D_{\beta}D_{\alpha}f}(0,v)| $: 
     w.l.o.g. assume $ \alpha_2=\beta_2\in\F_{2^k}^* $ and $ \alpha_1\ne\beta_1 $, then we have 
-    \begin{align*}
-        \left\lvert W_{D_{\beta}D_{\alpha}f}(0,v)\right\rvert =2^k\left\lvert \sum_{y\in\F_{2^k}}(-1)^{\tr\left(\frac{\lambda(\alpha_1+\beta_1)}{y+\alpha_2}+\frac{\lambda(\alpha_1+\beta_1)}{y}+vy\right)}\right\rvert\le 2^{k+1}\left\lfloor 2^{\frac{k}{2}+1}\right\rfloor+2^{k+2}
-    \end{align*}
+    \[\left\lvert W_{D_{\beta}D_{\alpha}f}(0,v)\right\rvert =2^k\left\lvert \sum_{y\in\F_{2^k}}(-1)^{\tr\left(\frac{\lambda(\alpha_1+\beta_1)}{y+\alpha_2}+\frac{\lambda(\alpha_1+\beta_1)}{y}+vy\right)}\right\rvert\le 2^{k+1}\left\lfloor 2^{\frac{k}{2}+1}\right\rfloor+2^{k+2}.\]
 
 
 
